// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H1 should render default markup when no props are passed 1`] = `
<h1
  className="h1 h1--extraBold h1--onyx-base ciPfPp"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a custom color prop that lacks variants 1`] = `
<h1
  className="h1 h1--extraBold h1--brand-base gJvZRX"
  color="brand"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a custom weight prop 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base epjltH"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a textTransform prop 1`] = `
<h1
  className="h1 h1--extraBold h1--onyx-base iKQMZM"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with custom color and variant props 1`] = `
<h1
  className="h1 h1--extraBold h1--accent01-dark cZhexz"
  color="accent01"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render without children 1`] = `
<h1
  className="h1 h1--extraBold h1--onyx-base ciPfPp"
/>
`;
